# hw-1.2.0

./: pyproject.toml  setup.py
docs/markdown/: _TOC.md
docs/markdown/hw/: __init__.md  __main__.md  _metadata.md  hw.md  startmeup.md
src/hw/: __init__.py  __main__.py  _metadata.py  hw.py
