[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hw"
version = "1.2.0c"
description = "Greet the world.."
authors = [{ name = "Russell Klein" }]
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hw*"]
# exclude = ["etc*", "data*"]

[tool.setuptools.package-data]
hw = ["data/**/*"]
